# content_automation_machine

./: .env.example  .gitignore  README.md  main.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md
content-automation-mcp/: .env.example  .gitignore  README.md  pyproject.toml
content-automation-mcp/src/content_automation/: config.py  server.py
content-automation-mcp/src/content_automation/services/: blotato.py  replicate.py
content-automation-mcp/src/content_automation/tools/: __init__.py  tweet.py  video_tweet.py
content-automation-mcp/tests/: conftest.py  test_blotato_service.py  test_config.py  test_replicate_service.py  test_server.py  test_tools.py
src/content_automation/: __init__.py  resilience.py
src/content_automation/services/: blotato.py  replicate.py
src/content_automation/tools/: video_tweet.py
tests/: conftest.py  test_integration.py  test_resilience.py  test_tools.py
